[package]
name = "raymarcher"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.11"
log = "0.4"
wgpu = {version="28.0", features = ["webgl"]}
pollster = "0.3"
bytemuck = {version = "1.25", features = ["derive"]}
web-time = "1.1"
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.68"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element"
]}
